[tool.poetry]
name = "my-telegram-bot-67485435"
version = "0.1.0"
description = "Telegram bot project"
authors = ["Your Name <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
aiogram = "*"
python-dotenv = "*"
aiosqlite = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"